--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,6 @@
-[package]
-name = "bnf_sampler"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-bnf = "0.5.0"
-qp-trie = "0.8.1"
-mimalloc = { version = "*", default-features = false }
-rustc-hash = "1.1.0"
-itertools = "0.11.0"
+members = [
+    "console_playground",
+    "sampler"
+]
