--- a/sampler/Cargo.toml
+++ b/sampler/Cargo.toml
@@ -11,3 +11,4 @@ mimalloc = { version = "*", default-features = false }
 rustc-hash = "1.1.0"
 itertools = "0.11.0"
 bit-set = "0.5.3"
+nohash-hasher = "0.2.0"
