--- a/sampler/Cargo.toml
+++ b/sampler/Cargo.toml
@@ -12,3 +12,6 @@ rustc-hash = "1.1.0"
 itertools = "0.11.0"
 bit-set = "0.5.3"
 nohash-hasher = "0.2.0"
+regex = "1.9.3"
+lazy_static = "1.4.0"
+memchr = "2.5.0"
