--- a/console_playground/Cargo.toml
+++ b/console_playground/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sampler = { path = "../sampler" }
+bnf_sampler = { path = "../bnf_sampler" }
