--- a/bnf_sampler/Cargo.toml
+++ b/bnf_sampler/Cargo.toml
@@ -12,7 +12,7 @@ readme = "../README.md"
 [dependencies]
 bnf = "0.5.0"
 qp-trie = "0.8.1"
-mimalloc = { version = "*", default-features = false }
+mimalloc = { version = "0.1.38", default-features = false }
 rustc-hash = "1.1.0"
 itertools = "0.11.0"
 bit-set = "0.5.3"
