Squashed commit of the following:
commit a2f918cc7315475b3381f42271d0d32ba2eb3810
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:39:57 2023 -0500

    Update release.yml

commit 888344b55c1488e31c704047954e910f20aae233
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:34:13 2023 -0500

    Update release.yml

commit 2f03a0bc4a6e78d9edbd89900882baa777fdf721
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:30:53 2023 -0500

    Update release.yml

commit 273ca32af69c8b21e6fd396f3abd4e35e30053d7
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:26:56 2023 -0500

    Update release.yml

commit a3c80cb099b8c708b57886b1c449329770f4e3c5
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:22:10 2023 -0500

    Update release.yml

commit f08b97bfcc1d3585b2f4b4a15c3753b7551c2d24
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:18:31 2023 -0500

    Update release.yml

commit 2853b96f0d8e3eb8f5ce4b7d75080b80c1d0179b
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:16:19 2023 -0500

    Update release.yml

commit 8c2bf3a907d08f6b763f2545fd7e2a61cbe2f82e
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:08:08 2023 -0500

    Update release.yml

commit 71bceabc7b84f8332d438f15dead603d787115f3
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 22:00:51 2023 -0500

    Update release.yml

commit dfe9d027073f8b0cd1cfce52136dca7f0665320f
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 21:57:49 2023 -0500

    Update release.yml

commit 21b1cc759136f6ffe84486b09a74e668dc6528f0
Author: Huanghe <55623775+Dan-wanna-M@users.noreply.github.com>
Date:   Fri Sep 1 21:49:53 2023 -0500

    Update release.yml

commit 32416b76074b2efbd897fac22c16ad374e

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,13 @@ on:
 name: Release
 
 env:
-  RELEASE_BIN: bnf_sampler
+  RELEASE_BIN: console_playground
   RELEASE_DIR: artifacts
   GITHUB_REF: '${{ github.ref }}'
   WINDOWS_TARGET: x86_64-pc-windows-msvc
   MACOS_TARGET: x86_64-apple-darwin
   LINUX_TARGET: x86_64-unknown-linux-gnu
+  EXAMPLE_BINS: console_playground
 
   # Space separated paths to include in the archive.
   RELEASE_ADDS: README.md LICENSE
@@ -20,9 +21,11 @@ jobs:
   build:
     name: Build artifacts
     runs-on: ${{ matrix.os }}
+    permissions: write-all
+    environment: dev
     strategy:
       matrix:
-        build: [linux, macos, windows]
+        build: [linux, windows,macos]
         include:
           - build: linux
             os: ubuntu-latest
@@ -40,7 +43,6 @@ jobs:
         with:
           toolchain: ${{ matrix.rust }}
           override: true
-          target: wasm32-unknown-unknown
 
       - name: Query version number
         id: get_version
@@ -52,8 +54,6 @@ jobs:
         if: matrix.build == 'linux'
         run: |
           sudo apt-get update -y --allow-releaseinfo-change
-          sudo apt-get install libudev-dev
-          sudo apt-get install libasound2-dev
       - name: Install p7zip (MacOS)
         if: matrix.build == 'macos'
         run: brew install p7zip
@@ -62,14 +62,14 @@ jobs:
         if: matrix.build == 'linux'
         run: |
           rustup target add ${{ env.LINUX_TARGET }}
-          cargo build --release --examples --target ${{ env.LINUX_TARGET }}
+          cargo build --release --target ${{ env.LINUX_TARGET }}
       - name: Build (MacOS)
         if: matrix.build == 'macos'
-        run: cargo build --release --examples
+        run: cargo build --release
 
       - name: Build (Windows)
         if: matrix.build == 'windows'
-        run: cargo build --release --examples
+        run: cargo build --release
 
       - name: Create artifact directory
         run: |
@@ -80,7 +80,7 @@ jobs:
         run: |
           for bin in ${{ env.EXAMPLE_BINS }}
           do
-            mv ./target/${{ env.LINUX_TARGET }}/release/examples/${bin} ./dist/${bin}
+            mv ./target/${{ env.LINUX_TARGET }}/release/${bin} ./dist/${bin}
           done
           mv ${{ env.RELEASE_ADDS }} ./dist
           7z a -tzip ./${{ env.RELEASE_DIR }}/${{ env.RELEASE_BIN }}-${{ steps.get_version.outputs.VERSION }}-${{ env.LINUX_TARGET }}.zip ./dist
@@ -90,7 +90,7 @@ jobs:
         run: |
           for bin in ${{ env.EXAMPLE_BINS }}
           do
-            mv ./target/release/examples/${bin}.exe ./dist/${bin}.exe
+            mv ./target/release/${bin}.exe ./dist/${bin}.exe
           done
           mv ${{ env.RELEASE_ADDS }} ./dist
           7z a -tzip ./${{ env.RELEASE_DIR }}/${{ env.RELEASE_BIN }}-${{ steps.get_version.outputs.VERSION }}-${{ env.WINDOWS_TARGET }}.zip ./dist
@@ -99,7 +99,7 @@ jobs:
         run: |
           for bin in $${{ env.EXAMPLE_BINS }}
           do
-            mv ./target/release/examples/${bin} ./dist/${bin}
+            mv ./target/release/${bin} ./dist/${bin}
           done
           mv ${{ env.RELEASE_ADDS }} ./dist
           7z a -tzip ./${{ env.RELEASE_DIR }}/${{ env.RELEASE_BIN }}-${{ steps.get_version.outputs.VERSION }}-${{ env.MACOS_TARGET }}.zip ./dist
@@ -112,6 +112,7 @@ jobs:
   release:
     name: GitHub Release
     needs: build
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - name: Query version number
@@ -124,7 +125,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           release_name: ${{ steps.get_version.outputs.VERSION }}
