--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,9 +97,7 @@ jobs:
       - name: Create tarball (MacOS)
         if: matrix.build == 'macos'
         run: |
-          echo $(ls ./target/release/)
-          echo ${bin}
-          for bin in $${{ env.EXAMPLE_BINS }}
+          for bin in ${{ env.EXAMPLE_BINS }}
           do
             mv ./target/release/${bin} ./dist/${bin}
           done
