--- a/.github/workflows/batch_delete.yml
+++ b/.github/workflows/batch_delete.yml
@@ -1,8 +1,6 @@
 name: Delete old workflow runs
 on:
-  schedule:
-    - cron: '0 0 1 * *'
-# Run monthly, at 00:00 on the 1st day of month.
+    workflow_dispatch
 
 jobs:
   del_runs:
