bnf_sampler_py v0.1.0

--- a/bnf_sampler_pybinding/Cargo.toml
+++ b/bnf_sampler_pybinding/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "bnf_sampler"
+name = "bnf_sampler_py"
 crate-type = ["cdylib"]
 
 [dependencies]
