--- a/bnf_sampler_pybinding/pyproject.toml
+++ b/bnf_sampler_pybinding/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "bnf_sampler_pybinding"
+name = "bnf_sampler_py"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
